# plataform

./: .env  Cargo.toml
migrations/2023-06-25-224150_create_users/: up.sql
src/: config.rs  database.rs  error.rs  main.rs  schema.rs  validate.rs
src/controllers/: mod.rs  users_controller.rs
src/models/: user.rs
src/repositories/: user_repository.rs
