[package]
name = "plataforma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.8.0"
actix-threadpool = "0.3.3"
actix-web = "4"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99.17"
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "uuid", "chrono", "numeric"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
envy = "0.4.2"
lazy_static = "1.4"
log = "0.4"
r2d2 = "0.8.10"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "1.3", features = [
  "v4",
  "fast-rng",
  "macro-diagnostics",
  "serde",
] }
validator = "0.16"
validator_derive = "0.16"
